--- a/WorldEdit/WorldEdit.csproj
+++ b/WorldEdit/WorldEdit.csproj
@@ -1,140 +1,71 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A3D1291E-B52B-4FCB-B1B0-EA5F482B37CD}</ProjectGuid>
+    <TargetFramework>net6.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WorldEdit</RootNamespace>
-    <AssemblyName>WorldEdit</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Platforms>AnyCPU;x64</Platforms>
+    <PlatformTarget>x64</PlatformTarget>
+    <Configurations>Debug;Release;x64</Configurations>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
     <OutputPath>..\..\..\Debug\ServerPlugins\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutputPath>..\..\..\Debug\ServerPlugins\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>bin\</OutputPath>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Mono.Data.Sqlite, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\References\Mono.Data.Sqlite.dll</HintPath>
+    <Reference Include="ModFramework">
+      <HintPath>J:\Downloads\TShock-Beta-win-x64-Release-4\bin\ModFramework.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.4.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\References\MySql.Data.dll</HintPath>
+    <Reference Include="OTAPI">
+      <HintPath>J:\Downloads\TShock-Beta-win-x64-Release-4\bin\OTAPI.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\References\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="System.ComponentModel" />
+    <Reference Include="System.Configuration.Install" />
+    <Reference Include="System.Transactions" />
+    <Reference Include="TerrariaServer">
+      <HintPath>J:\Downloads\TShock-Beta-win-x64-Release-4\bin\TerrariaServer.dll</HintPath>
     </Reference>
-    <Reference Include="OTAPI" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="TerrariaServer" />
-    <Reference Include="TShockAPI" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CanEditEventArgs.cs" />
-    <Compile Include="Commands\Activate.cs" />
-    <Compile Include="Commands\Actuator.cs" />
-    <Compile Include="Commands\Biomes\Biome.cs" />
-    <Compile Include="Commands\Biomes\Desert.cs" />
-    <Compile Include="Commands\Biomes\Hell.cs" />
-    <Compile Include="Commands\Biomes\Snow.cs" />
-    <Compile Include="Commands\Biomes\Mushroom.cs" />
-    <Compile Include="Commands\Biomes\Jungle.cs" />
-    <Compile Include="Commands\Biomes\Hallow.cs" />
-    <Compile Include="Commands\Biomes\Crimson.cs" />
-    <Compile Include="Commands\Biomes\Corruption.cs" />
-    <Compile Include="Commands\Biomes\Forest.cs" />
-    <Compile Include="Commands\FixGhosts.cs" />
-    <Compile Include="Commands\Inactive.cs" />
-    <Compile Include="Commands\Biome.cs" />
-    <Compile Include="Commands\Cut.cs" />
-    <Compile Include="Commands\FixHalves.cs" />
-    <Compile Include="Commands\FixSlopes.cs" />
-    <Compile Include="Commands\KillEmpty.cs" />
-    <Compile Include="Commands\Move.cs" />
-    <Compile Include="Commands\Mow.cs" />
-    <Compile Include="Commands\Outline.cs" />
-    <Compile Include="Commands\OutlineWall.cs" />
-    <Compile Include="Commands\PaintWall.cs" />
-    <Compile Include="Commands\Copy.cs" />
-    <Compile Include="Commands\Drain.cs" />
-    <Compile Include="Commands\FixGrass.cs" />
-    <Compile Include="Commands\Flip.cs" />
-    <Compile Include="Commands\Flood.cs" />
-    <Compile Include="Commands\Paint.cs" />
-    <Compile Include="Commands\Paste.cs" />
-    <Compile Include="Commands\Redo.cs" />
-    <Compile Include="Commands\Replace.cs" />
-    <Compile Include="Commands\ReplaceWall.cs" />
-    <Compile Include="Commands\Rotate.cs" />
-    <Compile Include="Commands\Scale.cs" />
-    <Compile Include="Commands\SetGrass.cs" />
-    <Compile Include="Commands\SetWall.cs" />
-    <Compile Include="Commands\SetWire.cs" />
-    <Compile Include="Commands\Shape.cs" />
-    <Compile Include="Commands\Slope.cs" />
-    <Compile Include="Commands\SlopeDelete.cs" />
-    <Compile Include="Commands\Smooth.cs" />
-    <Compile Include="Commands\SPaste.cs" />
-    <Compile Include="Commands\Text.cs" />
-    <Compile Include="Commands\Undo.cs" />
-    <Compile Include="Commands\WECommand.cs" />
-    <Compile Include="Config.cs" />
-    <Compile Include="Expressions\AndExpression.cs" />
-    <Compile Include="Expressions\Expression.cs" />
-    <Compile Include="Expressions\NotExpression.cs" />
-    <Compile Include="Expressions\OrExpression.cs" />
-    <Compile Include="Expressions\Parser.cs" />
-    <Compile Include="Expressions\TestExpression.cs" />
-    <Compile Include="Expressions\Token.cs" />
-    <Compile Include="Expressions\XorExpression.cs" />
-    <Compile Include="Extensions\TSPlayerExtensions.cs" />
-    <Compile Include="MagicWand.cs" />
-    <Compile Include="PlayerInfo.cs" />
-    <Compile Include="Commands\Set.cs" />
-    <Compile Include="Tools.cs" />
-    <Compile Include="WorldEdit.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorldSectionData.cs" />
+    <Reference Include="TShockAPI">
+      <HintPath>J:\Downloads\TShock-Beta-win-x64-Release-4\ServerPlugins\TShockAPI.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="OTAPI.dll" />
     <Content Include="TerrariaServer.exe" />
-    <Content Include="TShockAPI.dll" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0-rc.2.22472.11" />
+    <PackageReference Include="MySql.Data" Version="8.0.31" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta2" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="System.Management" Version="6.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.346202">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
